--- a/charts/reporting/templates/agent/service-account.yaml
+++ b/charts/reporting/templates/agent/service-account.yaml
@@ -2,6 +2,6 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: reporter
-  namespace: giantswarm-reporter
+  namespace: {{ .Values.agent.namespace }}
 # secrets:
 # - name: reporter-token-dhw98
