--- a/manifests/reporting/agent/cluster-role-binding.yaml
+++ b/manifests/reporting/agent/cluster-role-binding.yaml
@@ -1,3 +1,5 @@
+---
+# Source: reporting/templates/agent/cluster-role-binding.yaml
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
@@ -9,4 +11,4 @@ roleRef:
 subjects:
 - kind: ServiceAccount
   name: reporter
-  namespace: giantswarm-reporter
+  namespace: reporting-agent
