--- a/manifests/reporting/elasticstack/elasticsearch-psp-binding.yaml
+++ b/manifests/reporting/elasticstack/elasticsearch-psp-binding.yaml
@@ -1,3 +1,5 @@
+---
+# Source: reporting/templates/elasticstack/elasticsearch-psp-binding.yaml
 apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: ClusterRole
 metadata:
@@ -10,6 +12,7 @@ rules:
   verbs:
   - use
   resourceNames:
+  # FIXME
   # - elasticsearch-psp
   - privileged
 ---
@@ -21,7 +24,7 @@ metadata:
 subjects:
 - kind: ServiceAccount
   name: elasticsearch
-  namespace: reporter-elasticsearch
+  namespace: reporting-elasticstack
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
