--- a/charts/reporting/templates/elasticstack/elasticsearch-configmap.yaml
+++ b/charts/reporting/templates/elasticstack/elasticsearch-configmap.yaml
@@ -1,3 +1,4 @@
+{{ if .Values.elasticstack -}}
 apiVersion: v1
 kind: ConfigMap
 metadata:
@@ -22,3 +23,4 @@ data:
     # transport.tcp.port: ${TRANSPORT_PORT}
     # http.port: ${HTTP_PORT}
     network.host: 0.0.0.0
+{{- end}}
