--- a/charts/reporting/templates/elasticstack/elasticsearch-psp-binding.yaml
+++ b/charts/reporting/templates/elasticstack/elasticsearch-psp-binding.yaml
@@ -1,3 +1,4 @@
+{{ if .Values.elasticstack -}}
 apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: ClusterRole
 metadata:
@@ -27,3 +28,4 @@ roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
   name: elasticsearch-psp
+{{- end}}
