--- a/charts/reporting/templates/elasticstack/elasticsearch-service.yaml
+++ b/charts/reporting/templates/elasticstack/elasticsearch-service.yaml
@@ -1,3 +1,4 @@
+{{ if .Values.elasticstack -}}
 apiVersion: v1
 kind: Service
 metadata:
@@ -14,3 +15,4 @@ spec:
     targetPort: db
   selector:
     app: elasticsearch
+{{- end}}
