--- a/charts/reporting/templates/elasticstack/kibana-deployment.yaml
+++ b/charts/reporting/templates/elasticstack/kibana-deployment.yaml
@@ -1,3 +1,4 @@
+{{ if .Values.elasticstack -}}
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -35,3 +36,4 @@ spec:
         - containerPort: 5601
           name: ui
           protocol: TCP
+{{- end}}
