Add role and toolbox

--- a/manifests/reporting/agent/2-cronjob.yaml
+++ b/manifests/reporting/agent/2-cronjob.yaml
@@ -11,7 +11,7 @@ spec:
     spec:
       template:
         spec:
-          serviceAccountName: reporter
+          serviceAccountName: reporting-agent
           restartPolicy: Never
           containers:
           - name: reporter
