--- a/manifests/reporting/agent/3-service-account.yaml
+++ b/manifests/reporting/agent/3-service-account.yaml
@@ -3,7 +3,5 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: reporter
+  name: reporting-agent
   namespace: reporting-agent
-# secrets:
-# - name: reporter-token-dhw98
