--- a/manifests/reporting/agent/toolbox.yaml
+++ b/manifests/reporting/agent/toolbox.yaml
@@ -1,15 +1,15 @@
-apiVersion: v1
-kind: Pod
-metadata:
-  name: toolbox
-  namespace: reporting-agent
-spec:
-  serviceAccount: reporting-agent
-  containers:
-  - image: quay.io/giantswarm/reporting-agent:1184a230a65709228b458b1c086d1a575b78394c
-    command:
-      - "/bin/sh"
-      - "-c"
-      - "while true; do echo '.'; sleep 2; done"
-    imagePullPolicy: IfNotPresent
-    name: toolbox
+# apiVersion: v1
+# kind: Pod
+# metadata:
+#   name: toolbox
+#   namespace: reporting-agent
+# spec:
+#   serviceAccount: reporting-agent
+#   containers:
+#   - image: quay.io/giantswarm/reporting-agent:1184a230a65709228b458b1c086d1a575b78394c
+#     command:
+#       - "/bin/sh"
+#       - "-c"
+#       - "while true; do echo '.'; sleep 2; done"
+#     imagePullPolicy: IfNotPresent
+#     name: toolbox
