Add ttl for agent index

--- a/manifests/reporting/agent/cronjob.yaml
+++ b/manifests/reporting/agent/cronjob.yaml
@@ -18,12 +18,12 @@ spec:
             - bash
             - -c
             - |
-              kubectl get --all-namespaces --export --output=json "$RESOURCE_TYPES" | jq -c '.' | while IFS= read -r line; do
+              kubectl get --all-namespaces --export --output=json "$RESOURCE_TYPES" | jq -c '.items[]' | while IFS= read -r line; do
 
                 echo "$line" | curl \
                   --insecure --basic --ssl-reqd \
                   --request POST --header 'Content-Type: application/json' \
-                  --data @- "$ELASTICSEARCH_INDEX_URL/_doc" \
+                  --data @- "$ELASTICSEARCH_INDEX_URL/_doc?ttl=3600m" \
                     | jq '.'
                 echo
               done
@@ -39,4 +39,4 @@ spec:
             # - name: RESOURCE_TYPES
             #   value: daemonsets,deployments,ingresses,namespaces,nodes,pods,replicasets,services,statefulsets
             - name: RESOURCE_TYPES
-              value: daemonsets,deployments,ingresses,namespaces,pods,replicasets,services,statefulsets
+              value: pods
