--- a/manifests/reporting/processing/cronjob.yaml
+++ b/manifests/reporting/processing/cronjob.yaml
@@ -15,7 +15,7 @@ spec:
           restartPolicy: Never
           containers:
           - name: processing
-            image: quay.io/giantswarm/reporting-processor:1dc02cfc2b2d0942fec774982d28b64bfb046828
+            image: quay.io/giantswarm/reporting-processor:0.0.3
             env:
             - name: ELASTICSEARCH_INDEX_URL_AGENT
               value: http://elasticsearch.reporting-elasticstack.svc:9200/agent-test1
