--- a/helm/reporting-chart/templates/elasticstack/elasticsearch/statefulset.yaml
+++ b/helm/reporting-chart/templates/elasticstack/elasticsearch/statefulset.yaml
@@ -1,51 +1,8 @@
-{{ if .Values.elasticstack -}}
-apiVersion: v1
-kind: ServiceAccount
-metadata:
-  name: elasticsearch
-  namespace: {{ .Values.elasticstack.namespace }}
-  labels:
-    app: elasticsearch
----
-kind: ClusterRole
-apiVersion: rbac.authorization.k8s.io/v1
-metadata:
-  name: elasticsearch
-  namespace: {{ .Values.elasticstack.namespace }}
-  labels:
-    app: elasticsearch
-rules:
-- apiGroups:
-  - ""
-  resources:
-  - "services"
-  - "namespaces"
-  - "endpoints"
-  verbs:
-  - "get"
----
-kind: ClusterRoleBinding
-apiVersion: rbac.authorization.k8s.io/v1
-metadata:
-  namespace: {{ .Values.elasticstack.namespace }}
-  name: elasticsearch
-  labels:
-    app: elasticsearch
-subjects:
-- kind: ServiceAccount
-  name: elasticsearch
-  namespace: {{ .Values.elasticstack.namespace }}
-  apiGroup: ""
-roleRef:
-  kind: ClusterRole
-  name: elasticsearch
-  apiGroup: ""
----
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   name: elasticsearch
-  namespace: {{ .Values.elasticstack.namespace }}
+  
   labels:
     app: elasticsearch
 spec:
@@ -59,12 +16,9 @@ spec:
       labels:
         app: elasticsearch
     spec:
-      serviceAccountName: elasticsearch
+      serviceAccountName: {{ .Release.Namespace }}-elasticsearch
       containers:
-      - image: docker.elastic.co/elasticsearch/elasticsearch-oss:6.4.0
-      # - image: k8s.gcr.io/elasticsearch:v6.2.5
-        # to test if version exists goto
-        # https://k8s.gcr.io/v2/elasticsearch/manifests/v6.2.5
+      - image: {{ .Values.elasticstack.elasticsearch.image }}:{{ .Values.elasticstack.elasticsearch.image_tag }}
         name: elasticsearch
         resources:
           # need more cpu upon initialization, therefore burstable class
@@ -111,4 +65,3 @@ spec:
         name: elasticsearch-logging-init
         securityContext:
           privileged: true
-{{- end}}
