--- a/helm/reporting-chart/templates/elasticstack/elasticsearch/1-rbac.yaml
+++ b/helm/reporting-chart/templates/elasticstack/elasticsearch/1-rbac.yaml
@@ -1,14 +1,14 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ .Release.Namespace }}-elasticsearch
+  name: {{ template "elasticsearch.name" . }}
   labels:
     app: elasticsearch
 ---
 kind: ClusterRole
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
-  name: {{ .Release.Namespace }}-elasticsearch
+  name: {{ template "elasticsearch.name" . }}
   labels:
     app: elasticsearch
 rules:
@@ -24,16 +24,16 @@ rules:
 kind: ClusterRoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
-  name: {{ .Release.Namespace }}-elasticsearch
+  name: {{ template "elasticsearch.name" . }}
   labels:
     app: elasticsearch
 subjects:
 - kind: ServiceAccount
-  name: {{ .Release.Namespace }}-elasticsearch
+  name: {{ template "elasticsearch.name" . }}
   namespace: {{ .Release.Namespace }}
   apiGroup: ""
 roleRef:
   kind: ClusterRole
-  name: {{ .Release.Namespace }}-elasticsearch
+  name: {{ template "elasticsearch.name" . }}
   apiGroup: ""
 ---
