--- a/helm/reporting-chart/templates/elasticstack/elasticsearch/psp-binding.yaml
+++ b/helm/reporting-chart/templates/elasticstack/elasticsearch/psp-binding.yaml
@@ -1,7 +1,7 @@
 apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: ClusterRole
 metadata:
-  name: elasticsearch-psp
+  name: {{ template "elasticsearch.name" . }}-psp
 rules:
 - apiGroups:
   - extensions
@@ -10,28 +10,26 @@ rules:
   verbs:
   - use
   resourceNames:
-  - elasticsearch-psp
- # - privileged
+  - {{ template "elasticsearch.name" . }}-psp
 ---
 apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: ClusterRoleBinding
-# kind: RoleBinding
 metadata:
-  name: elasticsearch-psp
+  name: {{ template "elasticsearch.name" . }}-psp
 subjects:
 - kind: ServiceAccount
-  name: {{ .Release.Namespace }}-elasticsearch
+  name: {{ template "elasticsearch.name" . }}
   namespace: {{ .Release.Namespace }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: elasticsearch-psp
+  name: {{ template "elasticsearch.name" . }}-psp
 
 ---
 apiVersion: extensions/v1beta1
 kind: PodSecurityPolicy
 metadata:
-  name: elasticsearch-psp
+  name: {{ template "elasticsearch.name" . }}-psp
 spec:
   privileged: true
   allowPrivilegeEscalation: true
