--- a/helm/reporting-chart/templates/elasticstack/elasticsearch/service.yaml
+++ b/helm/reporting-chart/templates/elasticstack/elasticsearch/service.yaml
@@ -1,8 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: elasticsearch
-  
+  name: {{ template "elasticsearch.name" . }}
   labels:
     app: elasticsearch
 spec:
