--- a/helm/reporting-chart/templates/elasticstack/kibana/service.yaml
+++ b/helm/reporting-chart/templates/elasticstack/kibana/service.yaml
@@ -1,8 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: kibana
-  
+  name: {{ template "kibana.name" . }}
   labels:
     app: kibana
 spec:
