--- a/helm/reporting-chart/values.yaml
+++ b/helm/reporting-chart/values.yaml
@@ -7,20 +7,11 @@ elasticstack:
     image_tag: 6.4.0
   indexPrefix: reporting-
 
-agent:
-  image: quay.io/giantswarm/reporting-agent
-  image_tag: 1184a230a65709228b458b1c086d1a575b78394c
-  index: agent-test1
-  resource_types: pods
-  # eg:
-  #   resource_types: clusterrolebindings,clusterroles,componentstatuses,cronjobs,customresourcedefinition,daemonsets,deployments,endpoints,horizontalpodautoscalers,ingresses,jobs,limitranges,namespaces,networkpolicies,nodes,persistentvolumeclaims,persistentvolumes,poddisruptionbudgets,podpreset,pods,podsecuritypolicies,podtemplates,replicasets,replicationcontrollers,resourcequotas,rolebindings,roles,serviceaccounts,services,statefulsets,storageclasses
-  #   resource_types: daemonsets,deployments,ingresses,jobs,namespaces,nodes,pods,replicasets,replicationcontrollers,services,statefulsets
-  #   resource_types: daemonsets,deployments,ingresses,namespaces,nodes,pods,replicasets,services,statefulsets
-
 processing:
   image: quay.io/giantswarm/reporting-processor
   image_tag: 0.0.3
   index: processing-test1
+  agent_index: agent-test1
 
 querying:
   image: pipo02mix/reporting-querying
