--- a/helm/elastic-chart/templates/elasticstack/elasticsearch/service.yaml
+++ b/helm/elastic-chart/templates/elasticstack/elasticsearch/service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ template "elasticsearch.name" . }}
+  name: {{ .Values.elasticstack.elasticsearch.service_name }}
   labels:
     app: elasticsearch
 spec:
