--- a/helm/elastic-chart/templates/elasticstack/elasticsearch/service.yaml
+++ b/helm/elastic-chart/templates/elasticstack/elasticsearch/service.yaml
@@ -1,11 +1,19 @@
 apiVersion: v1
 kind: Service
 metadata:
+  {{- if eq .Values.elasticstack.provider "aws"}}
+  annotations:
+    service.beta.kubernetes.io/aws-load-balancer-internal: "0.0.0.0/0"
+  {{- end }}
+  {{- if eq .Values.elasticstack.provider "azure"}}
+  annotations:
+    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
+  {{- end }}
   name: {{ .Values.elasticstack.elasticsearch.service_name }}
   labels:
     app: elasticsearch
 spec:
-  type: NodePort
+  type: LoadBalancer
   ports:
   - name: db
     port: 9200
